# marisco

./: .cursorrules  .gitignore  2.3  CHANGELOG.md  CLAUDE.md  CRAFT.ipynb  Makefile  README.md  TODO.md  _quarto.yml  _todo.ipynb  index.html  index.ipynb  overview.ipynb  pyproject.toml  robots.txt  search.json  settings.ini  settings.ini.back  setup.py  sitemap.xml  styles.css
CRAFTs/: coding-style-abbr.ipynb  handler-doc-style.ipynb  sicp-design-memento.ipynb
api/: callbacks.html  configs.html  decoders.html  encoders.html  geo.html  inout.html  match.html  metadata.html  nc2csv.html  nc_template.html  netcdf2csv.html  serializers.html  utils.html
cli/: create_nc_template.html  db_to_nc.html  init.html  nc_to_csv.html  netcdfy.html  to_nc.html
docs/: _config.yml  core.html  data.core.html  data.html  index.html  sidebar.json  tutorial.html  tutorial.netcdfier.html
handlers/: data_format_transformation.html  geotraces.html  helcom.html  jois.html  maris_dump.html  maris_legacy.html  netcdf_to_csv.html  ospar.html  tepco.html
how-to/: reconcile-nomenclature.html  writing-a-handler.html
install_configure_guide/: README.html  README.md
marisco/: _modidx.py  _nbdev.py  callbacks.py  cdl.py  cli.py  configs.py  decoders.py  encoders.py  geo.py  inout.py  match.py  metadata.py  nc2csv.py  nc_template-v2.py  nc_template.py  nc_template_config.py  netcdf2csv.py  netcdf_to_csv.py  netcdf_to_refine.py  serializers.py  utils.py
metadata/: data-curation-rules.html  enum_rules.html  field-definition.html  sample-uniqueness.html
nbs/: .gitignore  00_data.core.ipynb  CLAUDE.md  (+9 more)
(+294 files in other folders)
